Scene singleton template is created.